# a2a_friend_scheduling

./: .env  .gitignore  README.md
host_agent_adk/: pyproject.toml
host_agent_adk/host/: agent.py  remote_agent_connection.py
kaitlynn_agent_langgraph/app/: agent.py  agent_executor.py
karley_agent_adk/: agent_executor.py
nate_agent_crewai/: __main__.py  agent_executor.py
oliwia_agent_azure/: Dockerfile  README.md  __init__.py  pyproject.toml  test_agent.py
oliwia_agent_azure/app/: __init__.py  __main__.py  agent.py  agent_executor.py
